# convfinqa-exercise

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
convfinqa/: utils.py
convfinqa/calculate/: __init__.py  calculate.py
convfinqa/document_processing/: __init__.py  document_processing.py
convfinqa/document_processing/utils/: semantic_chunking.py  summarise.py
convfinqa/query_processing/: __init__.py  query_processing.py
convfinqa/query_processing/utils/: prompts.py
data_exploration_notebooks/: explore_data.ipynb  get_samples_for_prompts.ipynb
