[tool.poetry]
name = "convfinqa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
lxml = "^5.3.0"
python-dotenv = "^1.0.1"
openai = "^1.41.0"
bs4 = "^0.0.2"
isort = "^5.13.2"
matplotlib = "^3.9.2"
langchain = "^0.2.14"
langchain-experimental = "^0.0.64"
langchain-openai = "^0.1.22"
gliner = "^0.2.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
